<resources>
    <string name="app_name">Coder Dojo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_add_button">Add</string>
    <string name="main_register_button">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="register_last_name_label">Last Name</string>
    <string name="register_last_name_hint">enter your last name</string>
    <string name="register_save_button_label">SAVE</string>
    <string name="register_first_name_label">First Name</string>
    <string name="register_first_name_hint">enter your first name</string>
    <string name="register_user_name_label">User Name</string>
    <string name="register_user_name_hint">enter your user name</string>
    <string name="register_age_label">Age</string>
    <string name="register_age_hint">enter your age</string>
    <string name="title_activity_member">Member Information</string>
    <string name="member_last_name_label">Last Name</string>
    <string name="member_last_name_hint">enter your last name</string>
    <string name="member_save_button_label">SAVE</string>
    <string name="member_first_name_label">First Name</string>
    <string name="member_first_name_hint">enter your first name</string>
    <string name="member_user_name_label">User Name</string>
    <string name="member_user_name_hint">enter your user name</string>
    <string name="member_age_label">Age</string>
    <string name="member_age_hint">enter your age</string>
    <string name="member_points_label">Points</string>
    <string name="member_points_zero">0</string>
    <string name="member_view_acitivties_lable">View Activities</string>
    <string name="title_activity_member_activities">Activities</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="member_activities_add">Add Activity</string>
    <string name="member_activities_total">total: </string>
    <string name="title_activity_add_custom">Add Custom Activity</string>
    <string name="custom_category_label">Category</string>
    <string name="custom_description_label">Description</string>
    <string name="custom_points_label">Points</string>
    <string name="custom_save_button">Save</string>
    <string name="custom_zero">0</string>
    <string name="custom_description">Description</string>
    <string name="custom_points_title">Assign points between 0 and 100.</string>
    <string name="custom_points_save">Save</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
