<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.louisaseever.memberstatus.RegisterActivity"
    android:columnCount="2"
    android:rowCount="6">

    <TextView android:text="@string/register_last_name_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerLastNameLabel"
        android:inputType="none"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="left" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerLastName"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="left"
        android:hint="@string/register_last_name_hint"
        android:editable="true"
        android:paddingLeft="20dp" />

    <TextView android:text="@string/register_first_name_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerFirstNameLabel"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="left"
        android:inputType="none" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerFirstName"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="left"
        android:hint="@string/register_first_name_hint"
        android:paddingLeft="20dp" />

    <TextView android:text="@string/register_user_name_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerUserNameLabel"
        android:inputType="none"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="left" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerUserName"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="left"
        android:hint="@string/register_user_name_hint"
        android:paddingLeft="20dp" />

    <TextView android:text="@string/register_age_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerAgeLabel"
        android:inputType="none"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="left" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/registerAge"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="left"
        android:hint="@string/register_age_hint"
        android:paddingLeft="20dp"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_save_button_label"
        android:id="@+id/registerSaveButton"
        android:layout_row="5"
        android:layout_column="1"
        android:onClick="onClickSave" />


</GridLayout>
