<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_points_title"
        android:id="@+id/customPointsRequest"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_zero"
        android:id="@+id/customPointsInput"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:inputType="number"
        android:padding="@dimen/abc_control_padding_material"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_points_save"
        android:id="@+id/customPointsSaveButton"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/abc_control_padding_material" />
</LinearLayout>
